package com.panda.study.designmodel.adapter.interfaceadapter;

/**
 * Created by Administrator on 2019/7/29.
 */
//在AbsAdapter我们将Interface4的方法进行默认实现
public abstract class AbsAdapter implements Interface4 {
    public void m1() {
    }
    public void m2() {
    }
    public void m3() {
    }
    public void m4() {
    }
}
